--- a/src/assets/styles/reset.css
+++ b/src/assets/styles/reset.css
@@ -208,3 +208,7 @@ a {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   vertical-align: middle; }
+
+#root{
+  height: 100%;
+}
